# cpp-cmake-archetype

./: README  pom.xml
src/main/resources/archetype-resources/: .gitignore  .hgignore  .svnignore  CMakeLists.txt  README  pom.xml
src/main/resources/archetype-resources/cmake/: CPackConfigDEB.cmake  CPackConfigRPM.cmake
src/main/resources/archetype-resources/src/main/cpp/: Calculator.cpp  main.cpp
src/main/resources/archetype-resources/src/main/cpp/work/: Calculator.hpp
src/main/resources/archetype-resources/src/main/resources/config/db/: database.yml
src/main/resources/archetype-resources/src/main/scala/: App.scala  Config.scala
src/main/resources/archetype-resources/src/main/scala/work/: Work.scala
src/main/resources/archetype-resources/src/test/cpp/: CMakeLists.txt  CalculatorTest.cpp  main.cpp
src/main/resources/archetype-resources/src/test/scala/work/: WorkTest.scala
